update vendor/odm to OS1.0.2.0

--- a/rootdir/etc/init.cgroup.rc
+++ b/rootdir/etc/init.cgroup.rc
@@ -17,6 +17,7 @@ on post-fs-data
     write /sys/devices/system/cpu/cpufreq/policy4/scaling_governor sugov_ext
     write /sys/devices/system/cpu/cpufreq/policy7/scaling_governor sugov_ext
     write /proc/sys/kernel/sched_util_clamp_min_rt_default 0
+    write /proc/sys/kernel/sched_pelt_multiplier 2
 
 on boot
     # boot perf. tune
